<resources>
    <string name="app_name">Workout</string>
    <string name="tab_text_1">Workouts</string>
    <string name="tab_text_2">Exercises</string>
    <string name="tab_text_3">Progress</string>
    <string name="action_bar_1">Calendar</string>
    <string name="dropdown_1">Themes</string>
    <string name="dropdown_2">Settings</string>
    <string name="workout_fab_1">Add Exercise</string>
    <string name="workout_fab_2">Copy Workout</string>
    <string name="workout_fab_3">Add Rest</string>
    <string name="exercises_fab_1">Create New</string>
    <string name="exercises_fab_2">Select Favorites</string>
    <string name="query_hint">Search Exercises</string>
</resources>
