<RelativeLayout android:id="@+id/workouts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/workouts_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.viewpager.widget.PagerTitleStrip
            android:id="@+id/workouts_viewpager_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize = "16sp"
            android:background="@color/white"
            android:padding="16dp" />
    </androidx.viewpager.widget.ViewPager>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/workout_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:fab_addButtonColorNormal="@color/mediumGray"
        app:fab_addButtonColorPressed="@color/mediumGray2"
        app:fab_addButtonPlusIconColor="@color/black"
        app:fab_addButtonStrokeVisible="false"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/workout_fab_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mediumGray"
            app:fab_colorPressed="@color/mediumGray2"
            app:fab_plusIconColor="@color/black"
            app:fab_size="mini"
            app:fab_stroke_visible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_fab_3"
            android:labelFor="@id/workout_fab_3" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/workout_fab_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mediumGray"
            app:fab_colorPressed="@color/mediumGray2"
            app:fab_plusIconColor="@color/black"
            app:fab_size="mini"
            app:fab_stroke_visible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_fab_2"
            android:labelFor="@id/workout_fab_2" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/workout_fab_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mediumGray"
            app:fab_colorPressed="@color/mediumGray2"
            app:fab_plusIconColor="@color/black"
            app:fab_size="mini"
            app:fab_stroke_visible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_fab_1"
            android:labelFor="@id/workout_fab_1"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>