<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:focusableInTouchMode="true">
        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            app:queryHint="@string/query_hint"
            android:background="@color/lightGray"
            android:layout_margin="8dp"
            app:iconifiedByDefault="false"
            android:imeOptions="actionSearch"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/exercise_sort_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_sort_black_24dp"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp"
            android:padding="12dp"
            android:background="@drawable/create_new_exercise_color"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercise_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/exercise_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"

            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            app:fab_addButtonColorNormal="@color/mediumGray"
            app:fab_addButtonColorPressed="@color/mediumGray2"
            app:fab_addButtonPlusIconColor="@color/black"
            app:fab_addButtonStrokeVisible="false"
            app:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.AddFloatingActionButton
                android:id="@+id/exercises_fab_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/mediumGray"
                app:fab_colorPressed="@color/mediumGray2"
                app:fab_plusIconColor="@color/black"
                app:fab_size="mini"
                app:fab_stroke_visible="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/exercises_fab_1"
                android:text="@string/exercises_fab_1" />

            <com.getbase.floatingactionbutton.AddFloatingActionButton
                android:id="@+id/exercises_fab_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/mediumGray"
                app:fab_colorPressed="@color/mediumGray2"
                app:fab_plusIconColor="@color/black"
                app:fab_size="mini"
                app:fab_stroke_visible="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/exercises_fab_2"
                android:text="@string/exercises_fab_2" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>
</LinearLayout>