<RelativeLayout android:id="@+id/workouts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/workout_dates"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:padding="16dp"
            android:background = "@drawable/workout_top_navigation_color" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:padding="16dp"
            android:layout_gravity="end"
            android:background = "@drawable/workout_top_navigation_color" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/workouts_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/workout_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:fab_addButtonColorNormal="@color/mediumGray"
        app:fab_addButtonColorPressed="@color/mediumGray2"
        app:fab_addButtonPlusIconColor="@color/black"
        app:fab_addButtonStrokeVisible="false"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/workout_fab_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mediumGray"
            app:fab_colorPressed="@color/mediumGray2"
            app:fab_plusIconColor="@color/black"
            app:fab_size="mini"
            app:fab_stroke_visible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_fab_3"
            android:labelFor="@id/workout_fab_3" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/workout_fab_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mediumGray"
            app:fab_colorPressed="@color/mediumGray2"
            app:fab_plusIconColor="@color/black"
            app:fab_size="mini"
            app:fab_stroke_visible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_fab_2"
            android:labelFor="@id/workout_fab_2" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/workout_fab_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mediumGray"
            app:fab_colorPressed="@color/mediumGray2"
            app:fab_plusIconColor="@color/black"
            app:fab_size="mini"
            app:fab_stroke_visible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_fab_1"
            android:labelFor="@id/workout_fab_1"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>